--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -30,7 +30,7 @@
     </section>
 
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -66,7 +66,7 @@
     </section>
 
 
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -102,7 +102,8 @@
     </section>
 
     <footer>
-        <p>Site criado por <a href="https://github.com/M4XX1MUS" target="_blank">MAXXIMUS</a> no <a href="https://www.cursoemvideo.com/" target="_blank">Curso em video</a></p>
+        <p>Site criado por <a href="https://github.com/M4XX1MUS" target="_blank">MAXXIMUS</a></p>
+        <p>Beijos Xuxu. &#128150 &#128536 Bebe água hein.</p>
     </footer>
 </body>
 </html>
