--- a/desafios/d014/desafio014.html
+++ b/desafios/d014/desafio014.html
@@ -40,19 +40,19 @@
     <table>
         <thead>
             <tr>
-                <th rowspan="2">Área</th>
-                <th rowspan="2" style="width: 140px">Discipinas</th>
-                <th colspan="2">Notas</th>
-                <th rowspan="2">Média</th>
+                <th rowspan="2" scope="col">Área</th>
+                <th rowspan="2" scope="col" style="width: 140px">Discipinas</th>
+                <th colspan="2" scope="colgroup">Notas</th>
+                <th rowspan="2" scope="col">Média</th>
             </tr>
             <tr>
-                <th>Nota 1</th>
-                <th>Nota 2</th>
+                <th scope="col">Nota 1</th>
+                <th scope="col">Nota 2</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <th rowspan="4">Exatas</th>
+                <th rowspan="4" scope="rowgroup">Exatas</th>
                 <td>Matemática</td>
                     <td id="nota">0.0</td>
                     <td id="nota">0.0</td>
@@ -77,11 +77,11 @@
                     <td id="nota">0.0</td>
             </tr>
             <tr id="media">
-                <th colspan="4"> Média de Exatas</th>
+                <th colspan="4" scope="row"> Média de Exatas</th>
                 <td id="nota">0.0</td>
             </tr>
         <tr>
-            <th rowspan="2">Humanas</th>
+            <th rowspan="2" scope="rowgroup">Humanas</th>
             <td>História</td>
                 <td id="nota">0.0</td>
                 <td id="nota">0.0</td>
@@ -94,7 +94,7 @@
                 <td id="nota">0.0</td>
         </tr>
         <tr id="media">
-            <th colspan="4">Média de Humanas</th>
+            <th colspan="4" scope="row">Média de Humanas</th>
             <td id="nota">0.0</td>
         </tr>
 
