Finalizado exercícios de tabelas

--- a/exercicios/ex023/tabela004.html
+++ b/exercicios/ex023/tabela004.html
@@ -46,10 +46,10 @@
             </tr>
         </tfoot>
         <tbody>
-            <tr>
+            <tr> <!-- Rowspan e Colspan mesclam as celulas de uma tabela sendo que o Col= Coluna, Row=Linha-->
                 <th rowspan="3" scope="rowgroup">Mulheres</th>
                 <td>Ana Maria Santos</td>
-                <td>Alien</td>
+                <td>Alien</td> <!--scope rowgroup é para indicar onde esta o conteudo da linha, da mesma forma que colgroup indica o conteudo da coluna-->
                 <td>Rambo</td>
                 <td>Vingadores</td>
             </tr>
