--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -21,7 +21,9 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta iure debitis odio id. Quaerat, eius cupiditate sapiente eos sequi doloremque mollitia. Dolores sunt quas voluptatibus impedit magni, nostrum non nemo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex quibusdam, tempora veritatis quidem voluptatibus recusandae quae laborum! Rem, repudiandae nesciunt neque, velit dolore asperiores harum doloribus id quae itaque molestias!</p>
 
-    <iframe src="pagina001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas-extras/pagina001.html" frameborder="0" height="500" width="500">
+        <p>Seu navegador não é compativel</p>
+    </iframe>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, eius sapiente? In veniam reiciendis ipsam, recusandae illum aut perspiciatis aperiam deserunt aliquam impedit placeat sit quidem excepturi tempore corporis porro Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem ad sed incidunt, autem maxime praesentium voluptates placeat eum vitae quibusdam molestias? Delectus rem vel libero quas maiores. Deleniti, tempora. Blanditiis.</p>
 </body>
